2002-09-28 17:30  Alexander Malmberg  <alexander@malmberg.org>

	* Source/art/ftfont.m (load_font_configuration): Handle the
	'Family' key.

2002-09-26 16:08  Alexander Malmberg  <alexander@malmberg.org>

	* Source/art/ftfont.m: Implement handling of the 'ScreenFonts' key
	in .nfont packages.

2002-09-25 22:39  Alexander Malmberg  <alexander@malmberg.org>

	* Source/art/ftfont.m: Rework font configuration code to handle
	the updated (and rather different) .nfont package format.

2002-09-24 14:38  Alexander Malmberg  <alexander@malmberg.org>

	* Source/art/ftfont.m: Use GSFontAntiAlias defaults value to decide
	whether	antialiasing should be enabled in the default rendering
	hints.

2002-09-24 13:22  Alexander Malmberg  <alexander@malmberg.org>

	* Source/x11/XWindowBuffer.m (+windowBufferForWindow:depthInfo:):
	Detect and handle errors properly. Only use shared memory for
	reasonably large windows.

	(-needsAlpha): Make data isn't NULL before trying to do anything.

2002-09-23 19:30  Alexander Malmberg  <alexander@malmberg.org>

	* Source/art/ftfont.m (-initWithFontName:matrix:): Retain
	familyName correctly.

2002-09-21 12:14  Alexander Malmberg  <alexander@malmberg.org>

	* Headers/x11/XWindowBuffer.h, Source/x11/XWindowBuffer.m
	(+windowBufferForWindow:depthInfo:): If possible, create a shared
	pixmap from the image data and set it as the background of the
	window.

2002-09-20 18:36  Alexander Malmberg  <alexander@malmberg.org>

	* Source/art/path.m (clip_svp_callback): Use correct x coordinate
	for final span.

	(-_clip_add_svp:): Place the last entry at the correct place
	in clip_index.

2002-09-20 18:05  Alexander Malmberg  <alexander@malmberg.org>

	* Source/art/path.m (clip_svp_callback, -_clip_add_svp:): Update
	the clipping bounding box.

2002-09-19  Adam Fedor  <fedor@gnu.org>

	* Source/win32/WIN32Server.m ([WIN -setbackgroundcolor::]): New.
	* Source/x11/XGServerWindow.m ([XGServer -_createBuffer:]): Remove
	setting background pixmap.