@@ -1,3 +1,7 @@
+2002-09-28 22:04  Alexander Malmberg  <alexander@malmberg.org>
+
+	* Source/art/ftfont.m: Add .font package handling again.
+
 2002-09-28 17:30  Alexander Malmberg  <alexander@malmberg.org>
 
 	* Source/art/ftfont.m (load_font_configuration): Handle the
